Login partial linked

--- a/TaskManager/Views/Shared/_Layout.cshtml
+++ b/TaskManager/Views/Shared/_Layout.cshtml
@@ -38,7 +38,8 @@
             Our platform is designed to simplify teamwork, enhance productivity, and promote a 
             cohesive working environment. Whether you're working remotely or in an office, our 
             platform has got you covered. Join our community today and take your teamwork to the next level! 
-            </p>            
+            </p>    
+            <partial name="_LoginPartial" />
         </main>
     </div>
 
