Role check added

--- a/TaskManager/Views/Home/Index.cshtml
+++ b/TaskManager/Views/Home/Index.cshtml
@@ -9,7 +9,14 @@
 
 @if (SignInManager.IsSignedIn(User))
 {
-    
+    @if (User.IsInRole("Admin"))
+    {
+        
+    }
+    @if (User.IsInRole("User"))
+    {
+        
+    }
 }
 else
 {
