--- a/TaskManager/Views/Home/Index.cshtml
+++ b/TaskManager/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
     }
     @if (User.IsInRole("User"))
     {
-        
+        <a asp-area="" asp-controller="Task" asp-action="Index">task</a>
     }
 }
 else
