--- a/TaskManager/Views/Task/Index.cshtml
+++ b/TaskManager/Views/Task/Index.cshtml
@@ -68,7 +68,10 @@
                 }
             </td>
             <td>
-                <a asp-action="Apply" asp-route-id="@item.Id">Apply</a> |
+                @if (item.StatusId == "To do")
+                {
+                    <a asp-action="Apply" asp-route-id="@item.Id">Apply</a>
+                }
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
