--- a/TaskManager/Views/Task/Index.cshtml
+++ b/TaskManager/Views/Task/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@model IEnumerable<TaskManager.Models.Task>
+﻿@using TaskManager.Areas.Identity.Data;
+@model IEnumerable<TaskManager.Models.Task>
+@inject Microsoft.AspNetCore.Identity.UserManager<TaskManagerUser> _userManager
 
 @{
     ViewData["Title"] = "Index";
@@ -69,7 +71,7 @@
             </td>
             <td>
                 @if (item.StatusId == "To do")
-                {
+                {                                       
                     <a asp-action="Apply" asp-route-id="@item.Id">Apply</a>
                 }
                 @if (User.IsInRole("Admin"))
@@ -77,7 +79,11 @@
                     <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                 }
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a>
-            </td>
+                @if (_userManager.GetUserId(User) == "dupa")
+                {
+                    
+                }
+                </td>
         </tr>
 }
     </tbody>
