--- a/TaskManager/Views/Task/Index.cshtml
+++ b/TaskManager/Views/Task/Index.cshtml
@@ -79,7 +79,7 @@
                     <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                 }
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a>
-                @if (_userManager.GetUserId(User) == "dupa")
+                    @if (_userManager.GetUserId(User) == _userManager.GetUserId(User))
                 {
                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
                 }
